tests/models/enum/unnamed/i128/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1)]
        i128
    ),
}
fn main() {}
