tests/models/enum/unnamed/i128/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_items = 2)]
        i128
    ),
}
fn main() {}
